# pitica

./: README.md
dev/examples/: create_stuff.py  dummy.py  generate_sources.sh  listen_ping.py  listen_pong.py
dev/examples/fp/: activity.py  domain.py  module.py  occurrence.py  pitica.yml
src/: setup.cfg
src/pitica/: __init__.py  __main__.py  config_reader.py  constants.py  entity.py  filter.py  table.py
src/pitica/generator/: class_generator.py  generate_sources.py  generator.py
src/pitica/notifications/: iengine.py  notifications.py
src/pitica/notifications/engines/: dummy.py  redis_client.py  redis_ps.py
src/pitica/persistance/: iengine.py  persistance.py
src/pitica/persistance/engines/: dummy.py  mysql_engine.py
