[metadata]
name = pitica
version = 0.0.0
author = Gonzalo G. Campos
author_email = gonzalogcampos@gmail.com
description = Model SQL database to python
url=http://www.gonzalogcampos.com
classifiers =
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
license = Apache
platform = any
license_files =
    = LICENSE

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    pyyaml==6.0.1
    mysql-connector-python
    redis

[options.packages.find]
include = pitica*